assets/css/apps/mail/MailDetails.css
.mail-details {
    font-family: 'RobotoFlex', 'RobotoRegular', Helvetica, Arial, sans-serif;
    background-color: var(--mail-inbox-bg);
    margin-block: 1em;
    padding-top: 2rem;
    width: 100%;
    border-radius: 1em;
    margin-inline-end: 0.5em;
    color: var(--mail-details-txt-color);
}

.mail-details header {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 1rem;
}

.mail-details header button:first-child {
    margin-right: 28px;
}

.mail-details svg {
    fill: var(--mail-body);
}

.mail-details button {
    display: flex;
    align-items: center;
    justify-content: center;
    background: transparent;
    border: none;
    cursor: pointer;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    padding: 0.375em 0.5em;
}

.mail-details button:hover {
    background: var(--mail-inbox-bg-read);
}

.mail-details h2 {
    padding-inline-start: 72px;
    padding-block-start: 20px;
    font-size: 22px;
    font-stretch: 100%;
    font-weight: 400;
    line-height: 28px;
}

.circle-envelop {
    display: flex;
    align-items: flex-start;
    margin-bottom: 8px;
    width: 100%;
}

.name-circle {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-inline: 1em;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background-color: #1f908f;
    color: var(--mail-inbox-bg);
    font-weight: bold;
    font-size: 18px;
    flex-shrink: 0;
}

.sender-details {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.from-name {
    margin-inline-end: 0.2em;
}

.from-address {
    color: var(--mail-details-to-color);
    font-weight: 400;
    font-size: 12px;
    letter-spacing: normal;
    line-height: 20px;
}

.sender-info {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 14px;
    gap: 8px;
    width: 100%;
}

.right-actions {
    display: flex;
    align-items: center;
    gap: 8px;
    flex-shrink: 0;
}

.left-side {
    display: flex;
    align-items: center;
    gap: 8px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    flex-shrink: 1; 
}

.timestamp {
    color: gray;
    font-size: 12px;
    white-space: nowrap;
}

.to {
    font-size: 12px;
    color: gray;
}

.mail-body {
    margin-inline-start: 72px;
    padding: 1em 0 1em 0;
    text-align: left;
}

.star-button {
    font-size: 16px;
    font-weight: 700;
    color: var(--mail-body);
}

